--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "apscheduler>=3.11.2",
     "duckdb>=1.4.3",
     "fastapi>=0.128.0",
+    "gitpython>=3.1.40",
     "httpx>=0.28.1",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
